--- a/frontend/src/styles/greeting.css
+++ b/frontend/src/styles/greeting.css
@@ -1,7 +1,7 @@
 .greeting{
     text-align: center;
-    background-color: #80B0E0;
-    color: white;
+    background-color: #2D336B;
+    color: #FFF2F2;
     position: fixed;
     width: 100%;
     z-index:1;
