--- a/frontend/src/styles/cut-register.css
+++ b/frontend/src/styles/cut-register.css
@@ -17,7 +17,7 @@
     margin-top: 0.5rem;
     border: 1px solid black;
     border-radius: 10px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
+  box-shadow: 0px 0px 4px 2px #2D336B;
   color: rgba(0, 0, 0, 0.568);
 }
 
@@ -31,7 +31,7 @@
   background-color: white;
   border: 1px solid black;
   border-radius: 10px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
+  box-shadow: 0px 0px 4px 2px #2D336B;
   color: rgba(0, 0, 0, 0.568);
 }
 
@@ -39,8 +39,8 @@
   padding: 5px 20px;
   border-radius: 10px;
   border: none;
-  background-color: #80B0E0;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
+  background-color: #2D336B;
+  box-shadow: 0px 0px 4px 2px #7886C7;
   color: white;
   display: flex;
   justify-content: center;
@@ -51,6 +51,7 @@
 .all-content-register button:hover{
   cursor: pointer;
   scale: 0.95;
+  background-color: #7886C7;
 }
 
 .all-last-registers{
@@ -61,7 +62,7 @@
     right: 0;
     text-align: center;
     overflow-y: scroll;
-    border-left:1px solid black ;
+    border-left:1px solid #2D336B ;
     display: flex;
     flex-direction: column;
     gap:1rem;
@@ -69,19 +70,20 @@
     align-items: center;
     overflow-x: hidden;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
-    background-color: #80B0E0;
+    background-color: #7886C7;
 
 }
 
 .all-last-registers h2{
-    top: 0rem;
-    position: sticky;
-    background-color: white;
-    padding: 20px;
-    width: 100%;
-    border-bottom: 1px solid black;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
-  color: rgba(0, 0, 0, 0.568);
+  top: 0rem;
+  position: sticky;
+  background-color: #A9B5DF;    
+  padding: 20px;
+  width: 100%;
+  border-bottom: 1px solid black;
+  box-shadow: 0px 0px 4px 2px #2D336B;
+  color:#FFF2F2;
+  text-shadow: 0px 0px 20px 0px #2D336B;
 
 }
 
@@ -94,16 +96,16 @@
   font-size: 18px;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
-  background-color: white;
+  background-color: #2D336B;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
-  color: rgba(0, 0, 0, 0.568);
+  color: #FFF2F2;
 }
 .all-last-registers li{
     display: flex;
   width: 100%;
   height: 9vh;
   justify-content: space-evenly;
-  border-right: 1px solid black;
+  border-right: 1px solid #FFF2F2;
   align-items: center;
     
 }
@@ -117,6 +119,5 @@
   height: 90%;
   font-size: 20px;
   justify-content: center;
-  color: rgba(0, 0, 0, 0.568);
-
+  color: #FFF2F2;
 }
