--- a/frontend/src/styles/table.css
+++ b/frontend/src/styles/table.css
@@ -10,7 +10,7 @@
   padding: 5px 10px;
   border: none;
   font-size: 20px;
-  color: rgba(0, 0, 0, 0.568);
+  color: #2D336B;
   background-color: transparent;
 }
 
@@ -18,14 +18,15 @@
   padding: 5px 20px;
   border-radius: 10px;
   border: none;
-  background-color: #80B0E0;
+  background-color: #2D336B;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
-  color: white;
+  color: #FFF2F2;
 }
 
 .select-current-day button:hover{
   cursor: pointer;
   scale: 0.95;
+  background-color: #7886C7;
 }
 
 .all-table-content {
@@ -41,7 +42,7 @@
   overflow-y: auto;
   padding: 1rem;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
-  background-color: #80B0E0;
+  background-color: #7886C7;
 }
   
 .all-table-content ul {
@@ -53,8 +54,8 @@
   align-items: center;
   font-size: 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.692);
-  background-color: white;
-  color: rgba(0, 0, 0, 0.568);
+  background-color: #2D336B;
+  color: #FFF2F2;
 }
 
 .all-table-content li {
@@ -62,7 +63,7 @@
   width: 100%;
   height: 8vh;
   justify-content: space-evenly;
-  border-right: 1px solid black;
+  border-right: 2px solid #FFF2F2;
   align-items: center;
 }
 .all-table-content li:last-child {
@@ -75,5 +76,5 @@
   height: 90%;
   font-size: 20px;
   justify-content: center;
-  color: rgba(0, 0, 0, 0.568);
+  color: #FFF2F2;
 }
